<resources>
    <string name="app_name">ListViewPeople</string>
    <string name="exit">Выход</string>
    <string name="edit">Редактировать…</string>
    <string name="title_activity_edit">Редактированиее</string>
    <string name="fullName">Ф.И.О.</string>
    <string name="phone">Телефон</string>
    <string name="address">Адрес</string>
    <string name="delete">Удалить</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="change">Изменить</string>
</resources>